[gd_scene load_steps=5 format=3 uid="uid://bro2asdburtfg"]

[ext_resource type="PackedScene" uid="uid://cfk1t3qe38si4" path="res://scenes/UI/Main/Options/Sounds.tscn" id="1_fp6hb"]
[ext_resource type="Script" path="res://scripts/UI/Main/Options/Options.gd" id="1_h52gt"]
[ext_resource type="PackedScene" uid="uid://b5vnqd8k8r6jg" path="res://scenes/UI/Main/Options/Controls.tscn" id="2_c5y68"]
[ext_resource type="PackedScene" uid="uid://t32pxx4ydgmd" path="res://scenes/UI/Main/Options/General.tscn" id="4_jd2n4"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h52gt")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Options"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Main" type="MarginContainer" parent="Margin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.4
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer/Main"]
layout_mode = 2

[node name="General" type="Button" parent="Margin/HBoxContainer/Main/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Back")
text = "Général"

[node name="Sound" type="Button" parent="Margin/HBoxContainer/Main/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../General")
focus_neighbor_bottom = NodePath("../Control")
text = "Son"

[node name="Control" type="Button" parent="Margin/HBoxContainer/Main/VBoxContainer"]
layout_mode = 2
text = "Contrôle"

[node name="Back" type="Button" parent="Margin/HBoxContainer/Main/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../General")
text = "Retour"

[node name="Sub" type="MarginContainer" parent="Margin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 150

[node name="General" parent="Margin/HBoxContainer/Sub" instance=ExtResource("4_jd2n4")]
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="Sounds" parent="Margin/HBoxContainer/Sub" instance=ExtResource("1_fp6hb")]
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="Controls" parent="Margin/HBoxContainer/Sub" instance=ExtResource("2_c5y68")]
visible = false
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Margin/HBoxContainer/Main/VBoxContainer/General" to="." method="_on_general_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/Main/VBoxContainer/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/Main/VBoxContainer/Control" to="." method="_on_control_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/Main/VBoxContainer/Back" to="." method="_on_back_pressed"]
